syntax = "proto3";

package pb;

import "chatRecord.proto";
import "google/protobuf/timestamp.proto";


option go_package = "Backend/pb";

// Create Chat Table
message CreateChatTableRequest {
    int32 UserID = 1;
}

// Create
message CreateChatRecordRequest {
    int32 UserID = 1;
    int32 TargetID = 2;
    string RoleType = 3;
    string MediaType = 4;
    string Message = 5;
    string Media = 6;
}

message CreateChatRecordResponse {
    ChatRecord ChatRecord = 1;
}

// Get
message GetChatRecordRequest {
    int32 UserID = 1;
    int32 TargetID = 2;
}

message GetChatRecordResponse {
    repeated ChatRecord ChatRecord = 1;
}


// Update
message UpdateChatRecordRequest {
    int32 UserID = 1;
    int32 TargetID = 2;
    string RoleType = 3;
    string MediaType = 4;
    string Message = 5;
    google.protobuf.Timestamp CreateAt = 6;
}

message UpdateChatRecordResponse {
    ChatRecord ChatRecord = 1;
}

// Delete
message DeleteChatRecordRequest {
    int32 UserID = 1;
}
